src/objects/OCD_Beh_Discount__c.object
<CustomObject>
    <description>Behavioural Discount Header</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Behavioral</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OCD Beh Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OCD Beh Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCD Beh Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>